--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           name: run lint
           command: |
             . venv/bin/activate
-            make lint --no-cache
+            make lint 
 
 workflows:
   default:
